compiler/tests/cases/should-compile/type-signature.aml
IO = use "System/Effects/IO"

typedFunction : Integer -> Integer = a -> a
typedValue : String = "Hello, world!"

main = (argv: List String): IO Integer -> IO.from 0
